--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,4 +34,4 @@ en:
   activerecord:
     attributes:
       user:
-        born_date_before_type_cast: "Born-date"
+        born_date_before_type_cast: "Born date"
